--- a/wp-content/themes/posterity.3.0/posterity/style.css
+++ b/wp-content/themes/posterity.3.0/posterity/style.css
@@ -58,11 +58,11 @@ th, td{
     text-decoration: none;
     width: auto;
     z-index: 100000; /* Above WP toolbar */
- 
+
     -webkit-transition: top .75s ease-out;
     transition: top .75s ease-out;
 }
- 
+
 .skip-link:focus {
     color: #21759b;
     top: 7px;
@@ -427,6 +427,7 @@ body{
 #mid{
 	overflow-x: hidden; /* Revo Slider fancy effects extending */
 	overflow-y: hidden; /* Revo Slider fancy effects extending */
+	margin-top: -24px;
 	position: relative;
 	z-index: 2; /* above background */ /* padding is for full screen, rest for "to-move" class */
 	transition: transform .5s;
@@ -1887,14 +1888,14 @@ a.hidden-logo{
 .header-horizontal #header-tools{
 	padding-right: 15px;
 }
-.header-horizontal #header-tools::before,
-.header-horizontal .head .socials::before{
+.header-horizontal #header-tools::after,
+.header-horizontal .head .socials::after{
 	content: "";
 	display: inline-block;
 	height: 25px;
 	width: 1px;
-	background-color: #E5E5E5;
-	margin-right: 15px;
+	/* background-color: #E5E5E5; */
+	margin-left: 36px;
 	vertical-align: middle;
 }
 .header-horizontal .head .socials a{
@@ -2701,6 +2702,7 @@ header.header-variant-one_line_centered .socials{
 	background-color: #1E1E1E;
 	width: 100%;
 	box-sizing: border-box;
+	z-index: 1;
 }
 .foot-items,
 #footer .foot-widgets{
@@ -2712,7 +2714,7 @@ header.header-variant-one_line_centered .socials{
 }
 #footer.narrow .foot-items .foot-content,
 #footer.narrow .foot-widgets{
-	max-width: 1170px;
+	max-width: 100%;
 }
 .foot-items{
 	color: #989898;
@@ -2756,7 +2758,7 @@ header.header-variant-one_line_centered .socials{
 	clear: both;
 }
 
-#footer li a{text-decoration:none;} 
+#footer li a{text-decoration:none;}
 
 
 /* content */
@@ -3341,6 +3343,7 @@ a.rsswidget{
 	position: relative;
 	width: 100%;
 	right: 25%;
+	margin-left: 7%;
 	/*rtl:end:ignore*/
 }
 .content-box{
@@ -3444,7 +3447,9 @@ a.rsswidget{
    General content styles
    ========================================================================== */
 .formatter{
-	padding: 60px;
+	padding: 50px;
+	width: 123%;
+    margin-left: -9%;
 }
 .no-bottom-space .content-box > .formatter{
 	padding-bottom: 0 !important;
@@ -4230,7 +4235,7 @@ h2.post-title:hover a {
 .item-video .mejs-container,
 .posts-list .item-video .mejs-container,
 .gallery-frame .archive-item .mejs-container,
- 
+
 .item-video .mejs-overlay,
 .item-video .mejs-poster,
 .gallery-frame .archive-item .mejs-overlay,
@@ -7501,7 +7506,7 @@ textarea{
 		margin: 50px -60px -60px;
 		padding: 40px 60px;
 	}
-	
+
 	.thumb-tray-button{
 		margin-right: 15px;
 	}
@@ -7986,7 +7991,7 @@ textarea{
 		bottom: 20px;
 	}
 
- 
+
 }
 
 
@@ -8095,3 +8100,4 @@ textarea{
     .gbposterity-home-section4 .responsive-columns-columns-4 .skt-blocks-advanced-column-child{border: none;}
     .gbposterity-home-section5 .responsive-columns-inner-wrap .skt-blocks-advanced-column-child::after{display: none;}
 }
+
